@@ -568,12 +568,12 @@ public class AkkuMasterChannelTab {
 														// build the point array according curves from record set
 														int[] points = new int[AkkuMasterChannelTab.this.recordSet.size()];
 
-														points[0] = new Integer((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_VOLTAGE)).intValue(); //Spannung 	[mV]
-														points[1] = new Integer((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_CURRENT)).intValue(); //Strom 			[mA]
+														points[0] = Integer.valueOf((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_VOLTAGE)).intValue(); //Spannung 	[mV]
+														points[1] = Integer.valueOf((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_CURRENT)).intValue(); //Strom 			[mA]
 														// display adaption * 1000  -  / 1000
-														points[2] = new Integer((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_CAPACITY)).intValue() * 1000; //Kapazität	[mAh] 
-														points[3] = new Integer((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_POWER)).intValue() / 1000; //Leistung		[mW]
-														points[4] = new Integer((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_ENERGIE)).intValue() / 1000; //Energie		[mWh]
+														points[2] = Integer.valueOf((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_CAPACITY)).intValue() * 1000; //Kapazität	[mAh] 
+														points[3] = Integer.valueOf((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_POWER)).intValue() / 1000; //Leistung		[mW]
+														points[4] = Integer.valueOf((Integer) this.data.get(AkkuMasterC4SerialPort.PROCESS_ENERGIE)).intValue() / 1000; //Energie		[mWh]
 														log.log(Level.FINE, points[0] + " mV; " + points[1] + " mA; " + points[2] + " mAh; " + points[3] + " mW; " + points[4] + " mWh"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$
 
 														AkkuMasterChannelTab.this.recordSet.addPoints(points); 
@@ -640,7 +640,7 @@ public class AkkuMasterChannelTab {
 									getTimer().scheduleAtFixedRate(getTimerTask(), delay, period);
 
 								}
-								catch (Exception e1) {
+								catch (Throwable e1) {
 									updateCurrentStatus();
 									AkkuMasterChannelTab.this.isStopButtonEnabled = false;
 									AkkuMasterChannelTab.this.startDataGatheringButton.setSelection(true);
